# aviation-safety-platform

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CROSSREF_ENGINE.md  Dockerfile  Makefile  NTSB_IMPORTER.md  OPERATIONS.md  README.md  RELEASE.md  TENANT_RLS.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  gunicorn_conf.py  manage.py  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  start.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
aircraft/: admin.py  models.py  serializers.py  views.py
aircraft/migrations/: 0001_initial.py  0002_initial.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_harden_mvp.py  003_seed_curator_override_source.py  004_claim_history_action.py  005_unique_raw_snapshot_ingestion_key.py  006_claim_conflict_note_and_source_tier.py  007_uppercase_outbox_status.py  008_outbox_retry_and_open_conflict_index.py  009_ingestion_identity.py  010_event_identity_index.py  011_canonical_ingestion_identity.py  012_registration_norms.py  013_registration_norms_gin_index.py  014_api_keys_role_constraint.py  015_sources_reliability_tier_check.py  016_raw_snapshot_submission_audit.py  017_sources_field_mapping.py  018_raw_snapshot_audit_check.py  019_lifecycle_enum_constraints.py  020_cap_registration_aliases.py  021_provenance_pagination_indexes.py  022_outbox_polling_indexes.py  023_pending_duplicate_review_pair_uniqueness.py  024_selfhost_runtime_polish_indexes.py  025_release_hygiene_and_worker_heartbeat.py  026_claim_hot_path_indexes.py  027_conflict_winning_claim_index.py  028_orion_entity_registry.py  029_chronos_timeline_engine.py  030_hermes_source_registry_fetch_queue.py  031_argus_signal_detection.py  032_argus_signals_ordering_index.py  033_argus_signal_version.py  034_hermes_leases_and_orion_identity_keys.py  035_public_event_pages.py  036_editorial_workflow.py  037_search_index.py  038_tenants_and_overlays.py  039_map_index.py  040_cms_content.py  (+9 more)
config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
core/: cache_keys.py  middleware.py  models.py  permissions.py  urls.py  views.py
deploy/free/: .env.example  Caddyfile  README.md  backup-postgres.sh  check-disk.sh  check-env.sh  check-latest-backup.sh  docker-compose.yml  grant-runtime-roles.py  init-db-roles.sh  prune-backups.sh  restore-postgres.sh
ingestion/: admin.py  models.py  serializers.py  storage.py  tasks.py  views.py
ingestion/migrations/: 0001_initial.py
ops/alerts/: prometheus-atlas-rules.yml
ops/load/: BASELINE_TEMPLATE.md  README.md  atlas_k6_load_test.js
ops/pgbouncer/: pgbouncer.ini  userlist.txt.example
ops/runbooks/: api-key-hash-secret-rotation.md  production-cutover-checklist.md
organizations/: admin.py  apps.py  models.py
organizations/migrations/: 0001_initial.py  0002_alter_organization_slug.py  0002_enable_extensions.py
reports/: admin.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
reports/migrations/: 0001_initial.py  0002_initial.py
src/atlas/: config.py  logging_config.py  security.py
taxonomy/: admin.py  models.py  serializers.py  views.py
taxonomy/migrations/: 0001_initial.py
tests/: conftest.py  test_health.py  test_report_creation.py  test_reports.py  test_users_admin.py
tests/api/: conftest.py  test_api_smoke.py  test_argus_api.py  test_audit_api.py  test_causality_api.py  test_chronos_api.py  test_cms_api.py  test_echo_crossref_api.py  test_echo_crossref_polling.py  test_editorial_api.py  test_hermes_api.py  test_map_api.py  test_metering_api.py  test_nl_search_api.py  test_orion_api.py  test_public_events_api.py  test_public_tenant_boundary.py  (+4 more)
users/: admin.py  models.py  serializers.py  views.py
vectors/: admin.py  models.py  tasks.py
(+295 files in other folders)
